[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memryon-langgraph"
version = "0.1.0"
description = "Native LangGraph long-term store connector for Memryon over MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.8.0",
  "langgraph>=1.0.0",
  "langchain-mcp-adapters>=0.1.9",
  "mcp>=1.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
